fixed horizontal scroll bug

--- a/style.css
+++ b/style.css
@@ -190,11 +190,12 @@ nav .bx{
         display: block;
     }
     .navbar{
-        position: absolute;
+        position: fixed;
         background: crimson;
         height: 100vh;
         width: 200px;
         top: 0;
+        overflow-x: hidden;
         right: -200px;
         text-align: left;
         z-index: 2;
